Add install tasks.

--- a/playbooks/config-vim.yml
+++ b/playbooks/config-vim.yml
@@ -1,5 +1,11 @@
 ---
 - hosts: localhost
+  become: yes
+  tasks:
+    - apt:
+        name: vim
+
+- hosts: localhost
   become: no
   tasks:
     - copy:
