--- a/playbooks/config-git.yml
+++ b/playbooks/config-git.yml
@@ -1,5 +1,13 @@
 ---
 - hosts: localhost
+  become: yes
+  tasks:
+    - apt:
+        name: git
+    - apt:
+        name: gitk
+
+- hosts: localhost
   become: no
   tasks:
     - copy:
