Make sure terminator config dir exists.

--- a/playbooks/config-terminator.yml
+++ b/playbooks/config-terminator.yml
@@ -2,6 +2,11 @@
 - hosts: localhost
   become: no
   tasks:
-    - copy:
+    - name: Create Terminator config dir
+      file:
+        path: ~/.config/terminator/
+        state: directory
+    - name: Copy Terminator config file
+      copy:
         src: terminator-config.txt
         dest: ~/.config/terminator/config
