Make sure SSH config has right mode.

--- a/playbooks/config-ssh.yml
+++ b/playbooks/config-ssh.yml
@@ -1,7 +1,10 @@
 ---
-- hosts: localhost
+- name: Configure SSH client
+  hosts: localhost
   become: no
   tasks:
-    - copy:
+    - name: Copy SSH config
+      copy:
         src: ssh-config.txt
         dest: ~/.ssh/config
+        mode: 0600
